--- a/index.html
+++ b/index.html
@@ -1,42 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Response Personal Portfolio </title>
+        <meta charset="UTF-8">
+        <title>Response Personal Portfolio </title>
 
-    <!--box icons-->
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+        <!--box icons-->
+        <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
-    <!--custom css-->
-  <link rel="stylesheet" href="./assets/css/stylesheet.css">
+        <!--custom css-->
+      <link rel="stylesheet" href="./assets/css/stylesheet.css">
+        <!-- add JS file -->
+             <script src="assets/js/javascript.js"></script>
+       <!-- <script src="assets/js/javascript.js" type="text/javascript"></script>-->
+
+    <!--sdk installation-->
+    <script type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+        (function(){
+            emailjs.init("psSuLRR7YCojsBr2r");
+        })();
+    </script>
+
 </head>
 <body>
 <header class="header">
-  <a href="#" class="logo">Portfolio</a>
+      <a href="#" class="logo">Portfolio</a>
 
-    <i class='bx bx-menu ' id="menu-icon"> </i>
-    <nav class="navbar">
-        <a href="#home" class="active">Home</a>
-        <a href="#about">About</a>
-        <a href="#services">Services</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
+        <i class='bx bx-menu ' id="menu-icon"> </i>
+            <nav class="navbar">
+                <a href="#home" class="active">Home</a>
+                <a href="#about">About</a>
+                <a href="#services">Services</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contact">Contact</a>
+            </nav>
 </header>
-
-
 <!-- home section design-->
 <section class="home" id="home">
     <div class="home-content">
         <h3>Hello,It's Me</h3>
         <h1>Abdul Raqeeb</h1><h3> And I'm a <span>Full Stack Developer</span></h3>
         <p> add some text for more infomation</p>
-        <div class="social-media">
-            <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
-            <a href="#"><i class='bx bxl-facebook-circle'></i></a>
-            <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
-        </div>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="#"><i class='bx bxl-github'></i></a>
+                <a href="#"><i class='bx bxl-facebook-circle'></i></a>
+                <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
+            </div>
         <a href="#" class="btn">download CV</a>
     </div>
 
@@ -44,9 +56,6 @@
         <img src="assets/img/8B66AC0A-1BDF-4CA1-8C1A-FE11033DCCB8.png" alt="home pic ">
     </div>
 </section>
-
-
-
 <!--about section design-->
 <section class="about" id="about">
     <div class="about-img">
@@ -60,21 +69,18 @@
         <a href="#" class="btn">Read More</a>
     </div>
 </section>
-
-
-
 <!--Services section design-->
 <section class="services" id="services">
     <h2 class="heading">Our <span>Services</span></h2>
 
-    <div class="services-container">
-        <div class="services-box">
-            <i class='bx bxs-credit-card-front' ></i>
-            <h3>Frontend Development</h3>
-            <p>add some services</p>
-            <a href="#"class="btn">Read More</a>
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bxs-credit-card-front' ></i>
+                <h3>Frontend Development</h3>
+                <p>add some services</p>
+                <a href="#"class="btn">Read More</a>
+            </div>
         </div>
-    </div>
 
         <div class="services-container">
             <div class="services-box">
@@ -92,31 +98,46 @@
                     <a href="#"class="btn">Read More</a>
                 </div>
             </div>
-    </div>
 </section>
-
-
+<!--contact desing-->
 <section class="contact" id="contact">
-    <div class="login-form">
-        <form>
-            <h1>Login</h1>
-            <div class="content">
-                <div class="input-field">
-                    <input type="email" placeholder="Email" autocomplete="nope">
+    <h2 class="heading">Contact <span>Me!</span></h2>
+            <form id="emailForm">
+                <div class="input-box">
+                   <!-- <input type="text" placeholder="Full Name">-->
+                    <input   type="email" placeholder="Email Address" id="recipientEmail">
                 </div>
-                <div class="input-field">
-                    <input type="password" placeholder="Password" autocomplete="new-password">
+
+                <div class="input-box">
+                    <!--<input type="number" placeholder="Mobile Number">-->
+                    <input type="text" placeholder="Email Subject" id="emailSubject">
                 </div>
-                <a href="#" class="link">Forgot Your Password?</a>
-            </div>
-            <div class="action">
-                <button>Register</button>
-                <button>Sign in</button>
-            </div>
-        </form>
-    </div>
+                <textarea name="" id="emailMessage" cols="30" rows="10" placeholder="your message" ></textarea>
+                <input type="submit" value="Send Message" class="btn" onclick="sendMail()">
+
+            </form>
+
+
+    <!--<form id="emailForm">-->
+    <!--  <label for="recipientEmail">Recipient email:</label>-->
+    <!--  <input type="email" id="recipientEmail" name="recipientEmail"><br>-->
+
+
+    <!--  <label for="emailSubject">Subject:</label>-->
+    <!--  <input type="text" id="emailSubject" name="emailSubject"><br>-->
+
+    <!--  <label for="emailMessage">Message:</label><br>-->
+    <!--  <textarea id="emailMessage" name="emailMessage"></textarea><br>-->
+
+    <!--  <input type="submit" value="Send Email">-->
+
+ <!-- </form>-->
+
+
+
+
 </section>
-
-
+<!--footer secion -->
+<footer></footer>
 </body>
 </html>
