--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h1>Abdul Raqeeb</h1><h3> And I'm a <span>Full Stack Developer</span></h3>
         <p> add some text for more infomation</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
+                <a href="https://www.linkedin.com/public-profile/settings?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_self_edit_contact-info%3BXWgEPIq2Sky0XTuc4zFxEw%3D%3D"><i class='bx bxl-linkedin-square' ></i></a>
                 <a href="#"><i class='bx bxl-github'></i></a>
                 <a href="#"><i class='bx bxl-facebook-circle'></i></a>
                 <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
